# hyperion_utils

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  Doxyfile-mcss.in  Doxyfile.in  LICENSE  README.md  build.sh  clean.sh  enum.html  genindex.html  index.html  linux-clang.cmake  linux-gcc.cmake  objects.inv  quick_start.html  search.html  searchindex.js  sitemap.xml  test.sh  windows-clang.cmake  windows-msvc.cmake  xmake.lua
_sources/: enum.rst.txt  index.rst.txt
_sources/error_handling/: Option.rst.txt  StatusCode.rst.txt  index.rst.txt
_sources/error_handling/status_codes/: NTDomain.rst.txt  SystemDomain.rst.txt  Win32Domain.rst.txt
_sources/filesystem/: index.rst.txt
_sources/memory/: CompressedPair.rst.txt  UniquePtr.rst.txt
_sources/meta_programming/: Concepts.rst.txt  Identity.rst.txt
_sources/synchronization/: ScopedLockGuard.rst.txt
_sources/utilities/: index.rst.txt
_static/: pygments.css
docs/: CMakeLists.txt  Doxyfile  Doxyfile-mcss  Doxyfile-mcss.in  Doxyfile.in  annotated.html  classhyperion_1_1ChangeDetector.html  classhyperion_1_1Entry.html  classhyperion_1_1EntryBase.html  classhyperion_1_1Error.html  classhyperion_1_1ErrorEntry.html  classhyperion_1_1FileCreationError.html  classhyperion_1_1FileSink.html  classhyperion_1_1InfoEntry.html  classhyperion_1_1LockFreeQueueError.html  classhyperion_1_1Logger.html  classhyperion_1_1LoggerError.html  classhyperion_1_1MessageEntry.html  classhyperion_1_1Option.html  classhyperion_1_1Result.html  classhyperion_1_1RingBuffer.html  classhyperion_1_1RingBuffer_1_1ConstIterator.html  classhyperion_1_1RingBuffer_1_1Iterator.html  classhyperion_1_1RingBuffer_3_01T_00_01RingBufferType_1_1ThreadSafe_00_01Allocator_01_4.html  classhyperion_1_1RingBuffer_3_01T_00_01RingBufferType_1_1ThreadSafe_00_01Allocator_01_4_1_1ConstIterator.html  classhyperion_1_1RingBuffer_3_01T_00_01RingBufferType_1_1ThreadSafe_00_01Allocator_01_4_1_1Iterator.html  classhyperion_1_1Sink.html  classhyperion_1_1SinkBase.html  classhyperion_1_1Sinks.html  classhyperion_1_1Span.html  classhyperion_1_1StderrSink.html  classhyperion_1_1StdoutSink.html  classhyperion_1_1TraceEntry.html  classhyperion_1_1WarnEntry.html  classhyperion_1_1detail_1_1UniqueDeleterDynSize.html  classhyperion_1_1utils_1_1LockFreeQueueError.html  classhyperion_1_1utils_1_1ReadWriteLock.html  classhyperion_1_1utils_1_1ReadWriteLockError.html  classhyperion_1_1utils_1_1Result.html  classhyperion_1_1utils_1_1RingBuffer.html  (+48 more)
docs/.ltex/: ltex.dictionary.en-US.txt
docs/_build/html/: enum.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  searchindex.js  sitemap.xml
docs/doxygen/html/: classhyperion_1_1utils_1_1ChangeDetector.html  classhyperion_1_1utils_1_1Error.html  classhyperion_1_1utils_1_1Logger.html  classhyperion_1_1utils_1_1LoggerError.html  classhyperion_1_1utils_1_1Option.html  classhyperion_1_1utils_1_1RingBuffer_1_1Iterator.html  classhyperion_1_1utils_1_1RingBuffer_3_01T_00_01RingBufferType_1_1ThreadSafe_00_01Allocator_01_4.html  classhyperion_1_1utils_1_1Span.html  index.html  namespacehyperion.html  namespacehyperion_1_1utils_1_1concepts.html  namespaces.html  structhyperion_1_1utils_1_1LoggerErrorCategory.html  structhyperion_1_1utils_1_1type__traits_1_1has__not__equal.html
docs/doxygen/latex/: annotated.tex  classhyperion_1_1utils_1_1ChangeDetector.tex  classhyperion_1_1utils_1_1Error.tex  classhyperion_1_1utils_1_1Error__inherit__graph.md5  classhyperion_1_1utils_1_1LockFreeQueue.tex  classhyperion_1_1utils_1_1LockFreeQueueError.tex  classhyperion_1_1utils_1_1LockFreeQueueError__coll__graph.md5  classhyperion_1_1utils_1_1Logger.tex  hierarchy.tex  (+47 more)
docs/error_handling/: Assert.rst  Error.rst  Panic.rst  StatusCode.rst
docs/memory/: index.rst
docs/meta_programming/: CallWithIndex.rst  Functions.rst  HasValue.rst  Identity.rst  List.rst  _Index.rst  index.rst
docs/synchronization/: index.rst
error_handling/: Assert.html  Error.html  Option.html  Panic.html  Result.html  StatusCode.html  index.html
error_handling/status_codes/: GenericDomain.html  NTDomain.html  PosixDomain.html  StatusCode.html  StatusCodeDomain.html  SystemDomain.html  Win32Domain.html
filesystem/: File.html  index.html
include/: ChangeDetector.h  Concepts.h  Error.h  Ignore.h  LockFreeQueue.h  Macros.h  OptionAndResult.h  RingBuffer.h  Span.h  TypeTraits.h
include/Hyperion/: BasicTypes.h  ChangeDetector.h  Concepts.h  Enum.h  Error.h  FmtIO.h  Format.h  HyperionDef.h  Ignore.h  LockFreeQueue.h  Logger.h  MPL.h  Option.h  Platform.h  Result.h  RingBuffer.h  Synchronization.h  Testing.h  TypeTraits.h  Utils.h
include/HyperionUtils/: BasicTypes.h  ChangeDetector.h  Concepts.h  Error.h  FmtIO.h  Format.h  HyperionDef.h  HyperionUtils.h  Ignore.h  LockFreeQueue.h  Logger.h  MPL.h  Macros.h  Memory.h  Monads.h  Option.h  OptionAndResult.h  Platform.h  Result.h  RingBuffer.h  Span.h  Synchronization.h  TypeTraits.h  fmtIncludes.h
include/synchronization/: ReadWriteLock.h  ScopedLockGuard.h
logging/: index.html
memory/: CompressedPair.html  EmptyBaseClass.html  UniquePtr.html  index.html
meta_programming/: CallWithIndex.html  Concepts.html  Functions.html  HasValue.html  Identity.html  List.html  TypeTraits.html  _Index.html  index.html
src/: Logger.cpp  benchmark.cpp  doctest_main.cpp  empty_cpp_for_tooling.cpp
src/error/: Panic.cpp
src/filesystem/: File.cpp
src/logging/: Sink.cpp
src/test/: ChangeDetectorTest.h  OptionTest.h  ResultTest.h  RingBufferTest.h
src/tests/: ChangeDetector.cpp  Enum.cpp  LockFreeQueue.cpp  Option.cpp  Result.cpp  RingBuffer.cpp  doctest_main.cpp
synchronization/: ReadWriteLock.html  ScopedLockGuard.html  index.html
test/: .clang-tidy  CMakeLists.txt  ChangeDetectorTest.h  OptionTest.h  ResultTest.h  RingBufferTest.h  Test.cpp  linux-clang.cmake  mac-clang.cmake  windows-clang.cmake
test/src/: ChangeDetectorTest.h  LoggerTest.h  OptionTest.h  ResultTest.h  RingBufferTest.h  Test.cpp  UniquePtrTest.h  microTest.h
utilities/: index.html
(+185 files in other folders)
